deploy/rotardv-painel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rotardv-painel-ingress
  namespace: rotardv-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: rotardv.luisfelipe.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rotardv-painel-service
            port:
              number: 80
  tls:
  - hosts:
    - rotardv.luisfelipe.dpdns.org
    secretName: rotardv-painel-tls
